# websocket_fastapi

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: __init__.py  dynamic.py  full_plex.py  manager.py  push.py  static.py
static/: duplex.py  dynamic.py  polling.py  push.py
templates/: base.html  duplex.html  dynamic.html  polling.html  push.html  static.html
